etc/css/style.css
/* ... */
div.content-container > div.detail-toggle > div.detail-toggle-detail {
  background-color: var(--panel-bg-secondary);
}

span.content-container-icon-close {
  position: absolute;
  right: 5px;
}

span.content-summary {
  font-weight: 600;
  font-size: var(--text-fs-md);
  line-height: var(--text-lh-md);
  color: var(--secondary-text);
  width: 100%;
  height: 30px;
  align-items: center;
  z-index: 1;
}

div.content-detail {
  display: flex;
  flex-direction: column;
  overflow-x: auto;
  max-width: 100%;
}

div.content-detail-padding {
  padding: 8px;
}

div.content-detail ecs-value {
  max-width: 150px;
  display: block;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

div.content-status {
  padding-top: 0px;
  opacity: 0;
  transition: padding-top 0.2s, opacity 0.2s;
}

div.content-status-visible {
  display: flex;
  min-height: 25px;
  align-items: center;
  padding-left: var(--p-1);
  padding-top: var(--p-1);

  opacity: 1;

  background-color: var(--panel-footer-bg);
  color: var(--footer-text);
  border-style: solid;
  border-width: 0px;
  border-top-width: 1px;
  border-bottom-width: 1px;
  border-color: var(--panel-border);
}

div.content-status-error {
  border-left-width: 2px;
  border-left-color: var(--error);
  border-left-width: 4px;
}

span.content-status-text {
  position: relative;
  left: -10px; /* correct for icon padding */
}

table.query-results-table {
  border-collapse: collapse;
  width: 100%;
  text-align: left;
  font-variant: inherit;
  font-size: inherit;
}

table.query-results-table th:first-child {
  text-align: left;
}


/* Deprecated? */
table.last_align_right th:last-child {
  text-align: right;
}

/* Deprecated? */
table.last_align_right td:last-child {
  text-align: right;
}

table.query-results-table th {
  /* padding: 0px; */
  padding-left: var(--p-3);
  padding-right: var(--p-3);
  padding-bottom: var(--p-3);
  padding-top: var(--p-3);
  font-weight: 400;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -o-user-select: none;
  user-select: none;
  color: var(--label);
}

table.query-results-table thead.query-results-table-header {
  background-color: var(--panel-bg-secondary);
  position: sticky;
  top: 0;
  z-index: 10;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
}

table.query-results-table thead tr,
table.query-results-table tbody tr {
  background-color: transparent;
  transition: background-color 0.1s ease;
}

table.query-results-table thead tr:hover,
table.query-results-table tbody tr:hover {
  background-color: rgba(255, 255, 255, 0.02);
}

th.query-results-header-term {
  color: #FFE100;
}

th.query-results-squeeze {
  width: 100%;
  padding: 0px;
  margin: 0px;
  min-width: 0px;
}

td.query-results-squeeze {
  width: 100%;
  padding: 0px;
  margin: 0px;
  min-width: 0px;
}

td.query-result-entity {
  white-space: nowrap;
}

table.query-results-table td {
  padding-left: var(--p-4);
  padding-right: var(--p-4);
  padding-bottom: var(--p-3);
  padding-top: var(--p-3);
  border-top-color: var(--grey-850);
  border-top-style: solid;
  border-top-width: 1px;
  font-size: inherit;
  font-feature-settings: "tnum";
}

/* detail toggle */

div.detail-toggle {
  display: flex;
  flex-direction: column;
}

div.detail-toggle-summary {
  display: flex;
  flex-direction: row;
  padding-right: 10px;
}

div.detail-toggle-detail {
  display: flex;
  position: relative;
  flex-direction: inherit;
  overflow: hidden;
  opacity: 1;

  padding-top: 5px;
  transition: padding-top 0.1s ease-out, opacity 0.06s ease-out;;
}

div.detail-toggle-detail-hide {
  padding-top: 0px;
  height: 0px;
  opacity: 0;
}

div.detail-toggle-detail-disable {
  padding-top: 0px;
}

div.detail-toggle-img svg {
  position: relative;
  top: -1px;
  width: 18px;
  margin-left: 3px;
  margin-right: 3px;
}

div.detail-toggle-divider {
  display: flex;
  flex-grow: 1.0;
  margin-left: 10px;
  margin-top: 8px;
  border-top-color: #1B1E25;
  border-top-style: solid;
  border-top-width: 1px;
}

